--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-mde": "^11.5.0",
     "react-scripts": "5.0.0",
     "react-split": "^2.0.14",
+    "remove-markdown": "^0.3.0",
     "showdown": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
